--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-loading-skeleton": "^1.3.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
